[gd_scene load_steps=21 format=3 uid="uid://ctomunlfo5xq2"]

[ext_resource type="Script" uid="uid://bu5m7p4kmugxl" path="res://Scripts/Entities/villager.gd" id="1_qg623"]
[ext_resource type="Texture2D" uid="uid://dlee10ejcs8f6" path="res://Assets/Sprite-villager-idle.png" id="2_g1yiw"]
[ext_resource type="Texture2D" uid="uid://cxnnrqxfpy0iu" path="res://Assets/köylü öldürme.png" id="3_4gvho"]
[ext_resource type="Texture2D" uid="uid://brgwq5eqj1r0v" path="res://Assets/Sprite-villager-yuruyus-saga.png" id="3_qq6i3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qq6i3"]
atlas = ExtResource("2_g1yiw")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gvho"]
atlas = ExtResource("2_g1yiw")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fqk2"]
atlas = ExtResource("2_g1yiw")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7yqm"]
atlas = ExtResource("2_g1yiw")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ah03g"]
atlas = ExtResource("3_4gvho")
region = Rect2(0, 0, 110, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_81rnw"]
atlas = ExtResource("3_4gvho")
region = Rect2(110, 0, 110, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tiu1n"]
atlas = ExtResource("3_4gvho")
region = Rect2(220, 0, 110, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5rta"]
atlas = ExtResource("3_qq6i3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifrv4"]
atlas = ExtResource("3_qq6i3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4ofq"]
atlas = ExtResource("3_qq6i3")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua4st"]
atlas = ExtResource("3_qq6i3")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_foc5b"]
atlas = ExtResource("3_qq6i3")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ug8ja"]
atlas = ExtResource("3_qq6i3")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbtiv"]
atlas = ExtResource("3_qq6i3")
region = Rect2(384, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_qg623"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qq6i3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gvho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fqk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7yqm")
}],
"loop": true,
"name": &"idle",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ah03g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81rnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tiu1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81rnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ah03g")
}],
"loop": true,
"name": &"killing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5rta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifrv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4ofq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua4st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_foc5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ug8ja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbtiv")
}],
"loop": true,
"name": &"left",
"speed": 14.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qg623"]
size = Vector2(40, 57)

[node name="Villager" type="Node2D" groups=["Enemy"]]
script = ExtResource("1_qg623")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_qg623")
animation = &"killing"
frame = 2
frame_progress = 0.36075968

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_qg623")

[node name="HitCooldown" type="Timer" parent="."]
wait_time = 2.0

[node name="HitResultCooldown" type="Timer" parent="."]
wait_time = 1.5

[connection signal="timeout" from="HitCooldown" to="." method="_on_hit_cooldown_timeout"]
[connection signal="timeout" from="HitResultCooldown" to="." method="_on_hit_result_cooldown_timeout"]
